--- a/src/main/resources/templates/thymeleaf/insert.html
+++ b/src/main/resources/templates/thymeleaf/insert.html
@@ -8,23 +8,40 @@
 <div>
     <h3>Form에서 사용</h3>
     <p>게시판 입력</p>
-    <form th:action="@{/list}" th:object="${BoardVO}" method="post">
-        <table border=1>
-            <tr>
-                <td>글제목</td>
-                <td>
-                    <input type="text" th:field="*{boardTitle}" placeholder="책 제목을 입력하세요">
-                </td>
-            </tr>
-            <tr>
-                <td>유저아이디</td>
-                <td>
-                    <input type="text" th:field="*{userId}" placeholder="저자명을 입력하세요">
-                </td>
-            </tr>
+    <form method="POST" th:action="@{/insert}" th:object="${bvo}"  class="my-login-validation" novalidate="">
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input th:name="userId" id="name" type="text" class="form-control" name="name" required autofocus>
+            <div class="invalid-feedback">
+                What's your name?
+            </div>
+        </div>
 
-        </table>
-        <button type="submit" >입력</button>
+        <div class="form-group">
+            <label for="email">E-Mail Address</label>
+            <input th:name="boardTitle" id="email" type="email" class="form-control" name="email" required>
+            <div class="invalid-feedback">
+                Your email is invalid
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="email">E-Mail Address</label>
+            <input th:name="boardContents" id="boardContents" type="email" class="form-control" name="email" required>
+            <div class="invalid-feedback">
+                Your email is invalid
+            </div>
+        </div>
+
+
+        <div class="form-group m-0">
+            <button type="submit" class="btn btn-primary btn-block">
+                Register
+            </button>
+        </div>
+        <div class="mt-4 text-center">
+            Already have an account? <a th:href="@{'/list'}">list</a>
+        </div>
     </form>
 </div>
 </body>
