--- a/src/main/resources/templates/thymeleaf/list.html
+++ b/src/main/resources/templates/thymeleaf/list.html
@@ -2,6 +2,7 @@
 
 <head> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Hello thymeleaf</title>
+    <link rel="stylesheet" th:href="@{/css/board.css}">
 </head>
     <body>
 
