--- a/src/main/resources/templates/thymeleaf/insert.html
+++ b/src/main/resources/templates/thymeleaf/insert.html
@@ -10,26 +10,26 @@
     <p>게시판 입력</p>
     <form method="POST" th:action="@{/insert}" th:object="${bvo}"  class="my-login-validation" novalidate="">
         <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">아이디</label>
             <input th:name="userId" id="name" type="text" class="form-control" name="name" required autofocus>
             <div class="invalid-feedback">
-                What's your name?
+                아이디부터 입력해라
             </div>
         </div>
 
         <div class="form-group">
-            <label for="email">E-Mail Address</label>
+            <label for="email">제목</label>
             <input th:name="boardTitle" id="email" type="email" class="form-control" name="email" required>
             <div class="invalid-feedback">
-                Your email is invalid
+                제목을 입력하세요
             </div>
         </div>
 
         <div class="form-group">
-            <label for="email">E-Mail Address</label>
+            <label for="email">내용</label>
             <input th:name="boardContents" id="boardContents" type="email" class="form-control" name="email" required>
             <div class="invalid-feedback">
-                Your email is invalid
+                내용을 입력하세요.
             </div>
         </div>
 
