--- a/src/main/resources/templates/thymeleaf/list.html
+++ b/src/main/resources/templates/thymeleaf/list.html
@@ -16,6 +16,7 @@
                     </td>
                     </tr>
             </table>
+            <a th:href="@{/insert}"><button>글쓰기</button></a>
 
 
     </body>
