--- a/src/main/resources/templates/thymeleaf/read.html
+++ b/src/main/resources/templates/thymeleaf/read.html
@@ -18,8 +18,86 @@
         <p>내용 : [[${BoardVO.boardContents}]]</p>
         <button th:onclick="deleteBoard([[${BoardVO.boardNo}]])">삭제하기</button>
         <button th:onclick="modifyBoard([[${BoardVO.boardNo}]])">수정하기</button>
-
     </div>
+    <div id="result">
+        <p>댓글번호:[[$data.replyNo]]</p>
+        <p>댓글:[[$data.replyContents]]</p>
+        <p>댓글러:[[$data.replyWriter]]</p>
+    </div>
+
+
+
+
+<!-- Reply List {s}-->
+
+<div class="my-3 p-3 bg-white rounded shadow-sm" style="padding-top: 10px">
+
+    <h6 class="border-bottom pb-2 mb-0">Reply list</h6>
+
+    <div id="replyList"></div>
+
+</div>
+
+<!-- Reply List {e}-->
+<script>
+
+//    $(document).ready(function () {
+//        var boardNo = "${BoardVO.boardNo}";
+//    })
+//    var boardNo = 11;
+//    $.getJSON("/all/" + boardNo, function (data){
+//        console.log("결과는 =" + JSON.stringify(data));
+//        document.getElementById("result").innerHTML = JSON.parse(data)
+//
+//    });
+
+// 이전 코드 생략
+
+function showReplyList(){
+
+    var url = "/replies/replylist";
+
+    var paramData = {"boardNo" : "${BoardVO.boardNo}"};
+
+    $.ajax({
+
+        type: 'GET',
+
+        url: url,
+
+        data: paramData,
+
+        dataType: 'json',
+
+        success: function(result) {
+
+            var htmls = "";
+
+            if(result.length < 1){
+
+                htmls.push("등록된 댓글이 없습니다.");
+
+            } else {
+
+                $(result).each(function(){
+                    htmls += this.replyContents;
+
+                });	//each end
+
+
+
+            }
+
+            $("#replyList").html(htmls);
+
+
+
+        }	   // Ajax success end
+
+    });	// Ajax end
+
+}
+</script>
 
 
 <script>
@@ -34,36 +112,8 @@
             $(location).attr('href','/update?boardNo='+boardNo)
         }
     }
+
 </script>
-<!--<th:block layout:fragment="script">-->
-<!--    <script th:inline="javascript">-->
-<!--        /*<![CDATA[*/-->
-
-<!--        function deletePOST(boardNo){-->
-
-
-<!--            if (confirm(boardNo + "번 게시글을 삭제할까요?")) {-->
-<!--                var uri = /*[[ @{/board/delete.do} ]]*/;-->
-<!--                var html = "";-->
-
-<!--                html += '<form name="dataForm" action="'+uri+'" method="post">';-->
-<!--                html += '<input type="hidden" name="boardNo" value="'+boardNo+'" />';-->
-<!--                html += '</form>';-->
-
-<!--                $("body").append(html);-->
-<!--                document.dataForm.submit();-->
-<!--            }-->
-<!--        }-->
-<!--        /*[- end of function -]*/-->
-
-<!--        /*]]>*/-->
-<!--    </script>-->
-<!--</th:block>-->
-<!--<div>-->
-<!--    <button th:type="submit" class="menu-button">삭제하기</button>-->
-<!--</div>-->
-
-
 </body>
 
 </html>
