--- a/src/main/resources/templates/thymeleaf/read.html
+++ b/src/main/resources/templates/thymeleaf/read.html
@@ -19,84 +19,39 @@
         <button th:onclick="deleteBoard([[${BoardVO.boardNo}]])">삭제하기</button>
         <button th:onclick="modifyBoard([[${BoardVO.boardNo}]])">수정하기</button>
     </div>
-    <div id="result">
-        <p>댓글번호:[[$data.replyNo]]</p>
-        <p>댓글:[[$data.replyContents]]</p>
-        <p>댓글러:[[$data.replyWriter]]</p>
+
+    <div>
+        <h4>댓글목록</h4>
+        <!-- 댓글목록 -->
+        <ul id="reply" style="list-style:none;">
+        </ul>
     </div>
-
-
-
-
-<!-- Reply List {s}-->
-
-<div class="my-3 p-3 bg-white rounded shadow-sm" style="padding-top: 10px">
-
-    <h6 class="border-bottom pb-2 mb-0">Reply list</h6>
-
-    <div id="replyList"></div>
-
-</div>
-
-<!-- Reply List {e}-->
 <script>
+    $(document).ready(function () {
+    var boardNo = [[${BoardVO.boardNo}]];
+    console.log("boardNo=" + boardNo);
 
-//    $(document).ready(function () {
-//        var boardNo = "${BoardVO.boardNo}";
-//    })
-//    var boardNo = 11;
-//    $.getJSON("/all/" + boardNo, function (data){
-//        console.log("결과는 =" + JSON.stringify(data));
-//        document.getElementById("result").innerHTML = JSON.parse(data)
-//
-//    });
+    $.getJSON("/replies/all/" + boardNo, function (data){
+        console.log("결과는 =" + JSON.stringify(data));
+        console.log((data.replyList.length));
+        var str ="";
 
-// 이전 코드 생략
+        $(data.replyList).each(function () {
+            var replyWriter = "'"+ this.replyWriter+"'";
+            console.log("replyWriter!!"+replyWriter);
 
-function showReplyList(){
+            str +="<li data-replyNo='"+ this.replyNo +"' class='replyList' style='text-align:left;'>"
+                +"<h4>"+ this.replyNo +"</h4>"
+                +"<h4>"+ this.replyWriter + "</h4>"
+                +"<blockquote>"+ this.replyContents +"</blockquote>"
+                +"</li>"
+                +"<hr/>";
+        });
 
-    var url = "/replies/replylist";
+        $("#reply").html(str);
 
-    var paramData = {"boardNo" : "${BoardVO.boardNo}"};
-
-    $.ajax({
-
-        type: 'GET',
-
-        url: url,
-
-        data: paramData,
-
-        dataType: 'json',
-
-        success: function(result) {
-
-            var htmls = "";
-
-            if(result.length < 1){
-
-                htmls.push("등록된 댓글이 없습니다.");
-
-            } else {
-
-                $(result).each(function(){
-                    htmls += this.replyContents;
-
-                });	//each end
-
-
-
-            }
-
-            $("#replyList").html(htmls);
-
-
-
-        }	   // Ajax success end
-
-    });	// Ajax end
-
-}
+    });
+    });
 </script>
 
 
@@ -117,3 +72,4 @@ function showReplyList(){
 </body>
 
 </html>
+
