--- a/src/main/resources/templates/thymeleaf/read.html
+++ b/src/main/resources/templates/thymeleaf/read.html
@@ -43,7 +43,7 @@
     <div class="error-message"></div>
 
     <div class="form-send" style="margin-top:10px">
-        <button id="submitBtn" class="btn btn-large">댓글작성</button>
+        <button id="submitBtn" onclick="location.reload()" class="btn btn-large">댓글작성</button>
     </div>
 </div>
 
@@ -88,7 +88,7 @@
     $(document).ready(function () {
 
         var boardNo = [[${BoardVO.boardNo}]];
-        console.log("boardNo=" + boardNo);
+
 
         $.getJSON("/replies/all/" + boardNo, function (data) {
             console.log("결과는 =" + JSON.stringify(data));
@@ -110,6 +110,7 @@
             $("#reply").html(str);
             })
         })
+
 
         $("#reply").on("click", ".replyList button", function(){  // 댓글 옆에 수정버튼 클릭 시 모달 창
             var li = $(this).parent(); /* li 선택 */
@@ -134,6 +135,7 @@
 
         });
 
+        //삭제처리
         $("#reDelBtn").on("click", function () {
             var replyNo = $(".title-dialog").html();
 
@@ -160,6 +162,7 @@
 
             })// ajax
         })
+
         // 수정 처리
         $("#reModifyBtn").on("click", function(){
 
