--- a/src/main/resources/templates/thymeleaf/bbs/list.html
+++ b/src/main/resources/templates/thymeleaf/bbs/list.html
@@ -21,6 +21,8 @@
             <a th:href="@{/insert}"><button>글쓰기</button></a>
 
 
+        <a href="/regist">회원가입</a>
+        <a href="/logini">로그인</a>
     </body>
 </html>
 
